Fri Aug 29 17:08:49 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Updated tarball (fixes a the bug with tags
	  better).

Fri Aug 29 16:32:14 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/tag_prefixes.py: Regression test for bug with the
	  tagspy.

Fri Aug 29 15:57:48 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add workaround for a bug in the
	  tagspy.

Fri Aug 29 14:51:20 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: Handle repeated adding of sort or facet
	  field actions with range parameters correctly.  Previously, a new
	  prefix was chosen each time, breaking accelerated searches for
	  that field.
	* xappy/unittests/range_accel.py: Test repeated sort and facet
	  field actions.

Fri Aug 29 11:22:38 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/dump_field_actions.py: Output the slot and prefix
	  information, too.

Fri Aug 29 10:58:45 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/dump_field_actions.py: Sort the fields, and allow a
	  specific field to be requested.

Fri Aug 29 10:39:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/dump_field_actions.py: Add script to dump the field actions
	  for a database.
	* utils/replay_search_log.py: Correct copyright date.

Fri Aug 29 09:54:01 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/replay_search_log.py: Add utility to replay a search log,
	  and time it.

Fri Aug 29 09:24:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Copy the __serialised member correctly when a
	  Query is copied.

Fri Aug 29 09:08:06 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix indentation.

Thu Aug 28 18:18:53 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add "internal" interface to allow